# tumagrid-ude

./: .gitignore  Cargo.toml  Dockerfile  EXECUTIVE_SUMMARY.md  GETTING_STARTED.md  IAAS_INTEGRATION_CHECKLIST.md  IMPLEMENTATION_STATUS.md  LICENSE  Makefile  OPENTELEMETRY_INTEGRATION.md  ORCHESTRATION_VISION.md  README.md  RUST_DESIGN_DOCUMENT.md  SERVICE_MESH_ANALYSIS.md  SERVICE_MESH_GUIDE.md  SPACEFORGE_HANDOFF.md  config.example.yaml
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  lib.rs  models.rs  orchestration.rs  traits.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: main.rs  raw_handlers.rs  server.rs  state.rs  telemetry.rs
crates/gateway/src/handlers/: crud.rs  health.rs  mesh.rs  metrics.rs  mod.rs  orchestration.rs
crates/managers/: Cargo.toml
crates/managers/src/: admin.rs  integration.rs  lib.rs  sync.rs
crates/modules/: Cargo.toml
crates/modules/src/: lib.rs
crates/modules/src/auth/: jwt.rs  mod.rs  rules.rs
crates/modules/src/crud/: mod.rs  mongo.rs  query_builder.rs  sql.rs
crates/modules/src/mesh/: executor.rs  health.rs  latency.rs  mod.rs  registry.rs  router.rs
crates/modules/src/orchestration/: composer.rs  executor.rs  mod.rs  planner.rs  sources.rs
examples/: ORCHESTRATION_EXAMPLES.md
