[workspace]
resolver = "2"
members = [
    "crates/core",
    # "crates/managers",  # TODO: Create this crate
    "crates/modules",
    # "crates/utils",     # TODO: Create this crate
    "crates/gateway",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["UDE Contributors"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
futures-util = "0.3"

# HTTP framework
axum = { version = "0.7", features = ["ws", "multipart"] }
tower = { version = "0.5", features = ["timeout", "limit", "buffer"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-full"] }

# GraphQL
async-graphql = { version = "7.0", features = ["dataloader"] }
async-graphql-axum = "7.0"

# Database drivers
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "mysql", "any", "json"] }
mongodb = "3.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Authentication
jsonwebtoken = "9.3"

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Templating
tera = "1.20"

# Logging & Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# OpenTelemetry (Observability)
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "metrics", "trace", "logs"] }
opentelemetry-prometheus = "0.27"
opentelemetry-semantic-conventions = "0.27"
tracing-opentelemetry = "0.28"
prometheus = "0.13"

# Configuration
config = "0.14"

# Concurrency
arc-swap = "1.7"
dashmap = "6.1"
parking_lot = "0.12"

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"

# File storage
aws-sdk-s3 = "1.54"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
